# hyperframes

./: .commitmsg.tmp  .dockerignore  .env.example  .fallowrc.jsonc  .filesize-allowlist  .gitattributes  .gitignore  .oxlintrc.json  .pre-commit-config.yaml  .prettierignore  ADOPTERS.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.amplifier-worker  Dockerfile.test  IMPLEMENTATION_PLAN.md  IMPROVEMENT_OPPORTUNITIES.md  PR_DRAFT.md  README.md  README.zh-CN.md  README_zh.md  SECURITY.md  U3-GATE-RESULT.md  YOUTUBE_ENGAGEMENT_ASSETS.md  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-manifest.json  socket.yml
.claude/: launch.json  settings.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: renovate.json
.zed/: settings.json
docs/: amplifier-video-worker.md  changelog.mdx  contributing.mdx  custom.css  design-system.md  docs.json  examples.mdx  experiments.html  hyperframes-player-embed.js  hyperframes-player.global.js  introduction.mdx  launch-videos.mdx  primitives-helpers.md  project-overview.md  qa-autoplay.js  qa-gallery.html  qa-proof.html  qa-rate.js  quickstart.mdx  spike-player.mdx  template-gallery.css  theme-compare.html  weekly-updates.mdx  wild-shelf.html
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: 01_render_example.py  02_render_from_data.py
sdk/python/src/hyperframes/: __init__.py  _cli.py  project.py
sdk/python/tests/: test_cli.py  test_integration.py  test_project.py
(+2937 files in other folders)
