[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyperframes-py"
version = "0.1.0"
description = "Python SDK for HyperFrames — drive the HTML-to-video CLI from Python."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ["video", "rendering", "html", "ffmpeg", "hyperframes"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Multimedia :: Video",
]
dependencies = []

[project.urls]
Homepage = "https://hyperframes.heygen.com"
Source = "https://github.com/heygen-com/hyperframes"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/hyperframes"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: needs a real Node >= 22 + hyperframes CLI install"]
